# trader-notifier

./: .env.example  .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml  requirements.txt  start_trading.bat  매매패턴.txt
_archive/: KOSPI_DATA_SOURCES_RESEARCH.md  PLAN.md
config/: app.yaml  discord.yaml  indicators.yaml
data/: correlation-analysis.md  indicators.json  research-summary.md  watchlist.json
scripts/: analyze.py  premarket.py  trading_loop.py
scripts/_archive/: discord_loop.py  live_monitor.py  signal.py
src/kospi_corr/: __main__.py
src/kospi_corr/analysis/: event_study.py  pattern_matcher.py  preprocessing.py
src/kospi_corr/analysis/correlation/: lead_lag.py  partial.py  pearson_spearman.py  rolling.py  service.py
src/kospi_corr/backtest/: __init__.py  engine.py  runner.py  signals.py  simulator.py
src/kospi_corr/cli/: __init__.py  main.py
src/kospi_corr/collectors/: __init__.py  base.py  domestic.py  naver_realtime.py  news.py
src/kospi_corr/config/: __init__.py
src/kospi_corr/data/: normalizer.py  watchlist.py
src/kospi_corr/domain/: errors.py  models.py  types.py
src/kospi_corr/engine/: __init__.py  bayesian.py  confidence.py  decision.py  market_phase.py  predictive.py  scorer.py  signal_pipeline.py
src/kospi_corr/notification/: __init__.py  discord.py  formatter.py  scheduler.py
src/kospi_corr/orchestration/: __init__.py  backtest_pipeline.py  correlation_pipeline.py
src/kospi_corr/signals/: __init__.py  regime.py
src/kospi_corr/visualization/: __init__.py  heatmap.py  ranking_table.py
(+7 files in other folders)
